k8s-security-framework/policies/pod-security/KSP-POD-007/tests/exception-policy-for-specific-resources.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: restrict-host-path-exception
  namespace: policy-test
spec:
  policyRefs:
  - name: restrict-host-path
    kind: ValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name in ['ksp-pod-007-exception', 'ksp-pod-007-exception-secondary',
      'ksp-pod-007-exception-tertiary'] && object.metadata.namespace == 'policy-test'
