k8s-security-framework/policies/pod-security/KSP-POD-007/tests/exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: restrict-host-path-exception
  namespace: policy-test
spec:
  policyRefs:
  - name: restrict-host-path
    kind: ValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name == 'ksp-pod-007-exception' && object.metadata.namespace
      == 'policy-test'
