k8s-security-framework/policies/pod-security/KSP-POD-007/tests/positive-empty-dir-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-007-positive-empty-dir-volume
  namespace: policy-test
spec:
  volumes:
    - name: cache
      emptyDir: {}
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
      volumeMounts:
        - name: cache
          mountPath: /cache
