k8s-security-framework/policies/pod-security/KSP-POD-007/tests/positive-hostpath-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-007-positive-hostpath-available
  namespace: policy-test
spec:
  volumes:
    - name: cache
      emptyDir: {}
    - name: host
      hostPath:
        path: /var/log
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
